Fix some sonar issues